# power-grid-model-io-native

./: .clang-tidy  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  build.sh  pyproject.toml  set_pypi_version.py  setup.py  sonar-project.properties
.github/: conda_pgm_env.yml  dependabot.yml
.github/workflows/: build.yml  check-code-quality.yml  citations.yml  clang-tidy.yml  main.yml  new-build.yml  reuse-compliance.yml  sonar.yml
cmake/: README.md.in  export_power_grid_model_io_native.cmake  pgm_io_native_version.cmake  power_grid_model_io_nativeConfig.cmake.in
examples/: CMakeLists.txt
examples/convert_vnf_to_pgm/: CMakeLists.txt
examples/convert_vnf_to_pgm/src/: main.cpp
power_grid_model_io_native_c/power_grid_model_io_native/: CMakeLists.txt
power_grid_model_io_native_c/power_grid_model_io_native/include/power_grid_model_io_native/common/: common.hpp
power_grid_model_io_native_c/power_grid_model_io_native/include/power_grid_model_io_native/pgm_vnf_converter/: converter_parser.hpp  pgm_vnf_converter.hpp  vnf_parser.hpp
power_grid_model_io_native_c/power_grid_model_io_native/include/power_grid_model_io_native/vnf_converter/: c_converter_api.cpp  vnf_pgm_converter.cpp  vnf_pgm_converter.hpp
power_grid_model_io_native_c/power_grid_model_io_native/include/power_grid_model_io_native/vnf_converter/dll_helpers/include/dll_helpers/: import_export_helpers.h
power_grid_model_io_native_c/power_grid_model_io_native_c/: CMakeLists.txt
power_grid_model_io_native_c/power_grid_model_io_native_c/include/: power_grid_model_io_native_c.h
power_grid_model_io_native_c/power_grid_model_io_native_c/include/power_grid_model_io_native_c/: basics.h  c_converter_api.h  pgm_vnf_converter.h  vnf_pgm_converter.h
power_grid_model_io_native_c/power_grid_model_io_native_c/src/: c_converter_api.cpp  handle.cpp  handle.hpp  pgm_vnf_converter.cpp  vnf_pgm_converter.cpp
src/power_grid_model_io_native/: __init__.py
src/power_grid_model_io_native/_core/: error_handling.py  power_grid_model_io_core.py  vnf_converter.py
tests/: CMakeLists.txt
tests/c_api_tests/: CMakeLists.txt  c_api_cpp_handle.hpp  test_c_api.cpp  test_c_api_pgm_vnf_converter.cpp  test_c_api_vnf_converter.cpp  test_entry_point.cpp
tests/cpp_unit_tests/: CMakeLists.txt  test_entry_point.cpp  test_pgm_vnf_converter.cpp
tests/unit/: test_vnf_converter.py
